#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-40
2018-04-19 Mikhail S. Dubrovin
- add support for jungfrau Id from config object
	new file:   app/find_detector_runs
	new file:   app/jungfrau_id
	new file:   examples/ex_jungfrau_get_id.py
	modified:   examples/ex_jungfrau_ipython.py
	modified:   examples/ex_source_dsname.py
	modified:   src/PyDataAccess.py
	modified:   src/UtilsJungfrau.py

Tag: V01-00-39
2018-04-09 Mikhail S. Dubrovin
- UtilsJungfrau.calib_jungfrau - add protection for raw and pedestals if None

Tag: V01-00-38
2018-03-19 Mikhail S. Dubrovin
- AreaDetector - evaluate image for (2-d) JUNGFRAU because of gaps in segment geometry.

Tag: V01-00-37
2018-02-27 Mikhail S. Dubrovin
- begin adding support for epix10ka PyDataAccess, UtilsEpix and examples/ex_epix10ka *
- fix epix geometry access issue - PyDetectorAccess - for geometry constants check repo directory only

Tag: V01-00-36
2018-02-01 Mikhail S. Dubrovin
- pnccd common mode - evaluate cm correction for masked pixels, apply for all in group
	modified:   examples/ex_pnccd_plot_in_evloop.py
	modified:   src/UtilsCommonMode.py

Tag: V01-00-35
2018-01-31 Mikhail S. Dubrovin
- refactor Utils, add new pnccd cm correction in det interface
	modified:   examples/ex_pnccd_plot_in_evloop.py
	modified:   src/AreaDetector.py
	modified:   src/PyDetectorAccess.py
	new file:   src/UtilsCommonMode.py
	modified:   src/UtilsJungfrau.py
	modified:   src/UtilsPNCCD.py

2018-01-30 Mikhail S. Dubrovin
- comment print in UtilsJungfrau.py

Tag: V01-00-34
2018-01-30 Mikhail S. Dubrovin
- fix numpy indexing in UtilsJungfrau.py, add UtilsPNCCD.py, update ex_pnccd_plot_in_evloop.py

Tag: V01-00-33
???

Tag: V01-00-32
2017-12-11 Daniel Damiani