@@ -26,14 +26,21 @@ Created on 2017-10-03 by Mikhail Dubrovin
 """
 #------------------------------
 
+import logging
+logger = logging.getLogger(__name__)
+
+import os
+
 import numpy as np
 from time import time
 #from math import fabs
-from Detector.GlobalUtils import print_ndarr, divide_protected
+from Detector.GlobalUtils import print_ndarr, info_ndarr, divide_protected
 from Detector.UtilsCommonMode import common_mode_rows, common_mode_cols, common_mode_2d
 from Detector.PyDataAccess import get_jungfrau_data_object, get_jungfrau_config_object
 
 from PSCalib.GlobalUtils import string_from_source, complete_detname
+
+DIRNAME = '/reg/g/psdm/detector/gains/jungfrau'
 
 BW1 =  040000 # 16384 or 1<<14 (15-th bit starting from 1)
 BW2 = 0100000 # 32768 or 2<<14 or 1<<15
@@ -186,13 +193,47 @@ def common_mode_jungfrau(frame, cormax) :
 
 #------------------------------
 
-def id_jungfrau_module(mco, fmt='%d-%d-%d') : # '%020d-%020d-%020d'
+def id_jungfrau_module(mco, fmt='%s-%s-%s') : # '%020d-%020d-%020d'
+    """Return (str) Id for jungfrau ModuleConfigV# object mco, e.g.:
+       1508613-3997943-22630721062933
+    """
+    if mco is None : return None
+    return fmt % (hex(mco.moduleVersion()).lstrip('0x'),\
+                  hex(mco.firmwareVersion()).lstrip('0x'),\
+                  hex(mco.serialNumber()).lstrip('0x'))\
+           if mco is not None else None
+
+#------------------------------
+
+def id_jungfrau_module_v0(mco, fmt='%d-%d-%d') : # '%020d-%020d-%020d'
     """Return (str) Id for jungfrau ModuleConfigV# object mco, e.g.:
        1508613-3997943-22630721062933
     """
     if mco is None : return None
     return fmt % (mco.moduleVersion(), mco.firmwareVersion(), mco.serialNumber())\
            if mco is not None else None
+
+#------------------------------
+
+def jungfrau_config_object(env, src) :
+    """Returns Jungfrau config object"""
+    source = psana_source(env, src)
+    return get_jungfrau_config_object(env, source)
+
+#------------------------------
+
+def number_of_modules_from_config(co) :
+    """Returns (int) number of modules from Jungfrau configuration object"""
+    if co is None : return None 
+    return co.numberOfModules()
+
+#------------------------------
+
+def number_of_modules_in_jungfrau(env, src) :
+    """Returns (int) number of modules for Jungfrau"""
+    source = psana_source(env, src)
+    co = get_jungfrau_config_object(env, source)
+    return number_of_modules_from_config(co)
 
 #------------------------------
 
@@ -208,13 +249,12 @@ def id_jungfrau_from_config(co, iseg=None) :
         return id_jungfrau_module(co.moduleConfig(iseg))
 
     modconfig_ids = [id_jungfrau_module(co.moduleConfig(i)) for i in range(nmods)]
-    return '-'.join(modconfig_ids)
+    return '_'.join(modconfig_ids)
 
 #------------------------------
 
-def id_jungfrau(env, src, iseg=None) :
-    """Returns (str) Id for jungfrau detector using env and psana.Source (or str) objects"""
-    #if isinstance(src, str) : raise TypeError('src parameter is expected to be of type psana.Source')
+def psana_source(env, src) :
+    """Returns psana.Source from string detector name or alias or psana.Source."""
 
     import psana
 
@@ -226,14 +266,130 @@ def id_jungfrau(env, src, iseg=None) :
         source = psana.Source(detname)
     else : raise TypeError('src parameter type should be psana.Source or str')
     if source is None: raise TypeError('src parameter type should be psana.Source or str')
-   
+    return source
+
+#------------------------------
+
+def id_jungfrau(env, src, iseg=None) :
+    """Returns (str) Id for jungfrau detector using env and psana.Source (or str) objects"""
+    source = psana_source(env, src)
     co = get_jungfrau_config_object(env, source)
     jfid = id_jungfrau_from_config(co, iseg)
-
-    if jfid is not None : return jfid # '1508613-22630721062933-3997872'
-
+    if jfid is not None : return jfid # '170505-149520170815-3d00b0'
     return string_from_source(source).replace(':','-') # e.g. 'XcsEndstation.0-Jungfrau.0'
 
+#------------------------------
+
+class JFPanelCalibDir() :
+    """Works with names like '170505-149520170815-3d00b0-20171025000000'
+       It does validiti check for availability of 3 or 4 fields and 
+       separate panel name and time stamp.
+    """
+    def __init__(self, dname) :
+        self.set_dir_name(dname)
+
+    def set_dir_name(self, dname) :
+        self.dname = dname
+        fields = dname.split('-')
+        nfields = len(fields)
+        if nfields<3 or nfields>4 :
+            #logger.warning('Incorrect directory name: %s' % dname)
+            self.is_valid = False
+            return
+        elif nfields==3 :
+            self.pname = self.dname
+            self.str_ts = None
+            self.int_ts = None
+        elif nfields==4 :
+            self.pname = dname.rsplit('-',1)[0] # '_'.join(fields[:3])
+            self.str_ts = fields[3]
+            self.int_ts = int(fields[3])
+        self.is_valid = True
+
+    def is_same_panel(self, other) :
+        if not(self.is_valid and other.is_valid) : return False
+        return self.pname == other.pname
+
+    def __cmp__(self, other) :
+        if not self.is_same_panel(other) : return None # Not-comparable names (different panel names)
+        elif self.int_ts == other.int_ts : return 0
+        elif self.int_ts is None and other.int_ts is not None: return -1
+        elif self.int_ts is not None and other.int_ts is None: return  1
+        elif self.int_ts < other.int_ts : return -1
+        elif self.int_ts > other.int_ts : return  1
+
+#------------------------------
+
+def _find_panel_calib_dir(panel, dnos=DIRNAME, tstamp=None) :
+    """Returns panel calibration directory from dnos (dirname objects) usint timestamp.
+    """
+    logger.info('Find calibdir for panel: %s and timestamp: %s' % (panel, str(tstamp)))
+    sorted_lst = sorted([o for o in dnos if panel==o.pname])    
+    size = len(sorted_lst)
+
+    logger.info('  Selected and sorted list of %d calibdirs:' % size)
+    for o in sorted_lst : print '    %s' % o.dname
+
+    if   size == 0      : return None
+    elif size == 1      : return sorted_lst[0].dname  # return 1st
+    elif tstamp is None : return sorted_lst[-1].dname # return latest
+    else : # select for time stamp
+        for i,o in enumerate(sorted_lst[1:]) : 
+            if o.int_ts > tstamp : return sorted_lst[i].dname # previous item in the list started from [1:]
+
+    return sorted_lst[-1].dname # return latest
+
+#------------------------------
+
+def find_panel_calib_dirs(jfid, dname=DIRNAME, tstamp=None) :
+
+    logger.info('Find panel calib dirs for jungfrau %s' % jfid)
+    msg = '%s content:' % dname
+    dnos = []
+    for d in os.listdir(DIRNAME) :
+        dno = JFPanelCalibDir(d)
+        if not dno.is_valid : continue
+        dnos.append(dno)
+        msg += '\n  %s'%dno.dname
+    logger.info(msg)
+
+    return [_find_panel_calib_dir(panel, dnos, tstamp) for panel in jfid.split('_')]
+
+#------------------------------
+
+def merge_panel_constants(dirs, ifname='%s/g%d_gain.npy', ofname='jf_pixel_gain', ofmt='%.4f') :
+    import sys
+    from PSCalib.NDArrIO import save_txt
+
+    lst_gains = []
+    for gi in range(3) :
+        lst_segs = []
+        for dir in dirs :
+            fname = ifname % (dir, gi)
+            if not os.path.lexists(fname) :
+                msg = 'FILE IS NOT AVAILABLE: %s' % fname
+                logger.warning(msg)
+                sys.exit(msg)                
+            nda = np.load(fname)
+            logger.info(info_ndarr(nda, 'file: %s nda\n    ' % fname))
+            lst_segs.append(nda)
+        nda_one_gain = np.stack(tuple(lst_segs))
+        logger.info(info_ndarr(nda_one_gain, 'nda_one_gain'))
+
+        lst_gains.append(tuple(nda_one_gain))
+
+    nda = np.stack(lst_gains)
+    logger.info(info_ndarr(nda, 'calib nda'))
+
+    #sh = (3,<nsegs>,512,1024)
+
+    np.save('%s.npy'%ofname, nda)
+    logger.info('Save n-d array in file "%s"' % ('%s.npy'%ofname))
+
+    save_txt('%s.txt'%ofname, nda, fmt=ofmt)
+    logger.info('Save n-d array in file "%s"' % ('%s.txt'%ofname))
+
+#------------------------------
 #------------------------------
 #------------------------------
 
@@ -321,6 +477,8 @@ if __name__ == "__main__" :
 
 if __name__ == "__main__" :
     print 80*'_'
+    #logging.basicConfig(format='%(asctime)s %(name)s %(levelname)s: %(message)s', datefmt='%H:%M:%S', level=logging.DEBUG)
+    logging.basicConfig(format='%(levelname)s: %(message)s', level=logging.DEBUG)
     tname = sys.argv[1] if len(sys.argv)>1 else '5'
     if tname in ('1', '2', '3', '4', '5') : test_id_jungfrau(tname)
     else : sys.exit ('Not recognized test name: "%s"' % tname)
