@@ -1,0 +1,35 @@
+####!/usr/bin/env python
+
+#-----------------------------
+DSNAMES = (\
+  'exp=detdaq17:run=68',\
+  'exp=mfx00616:run=8',\
+  'exp=mfx05516:run=16',\
+  'exp=mfxlr1716:run=295',\
+  'exp=mfxlr5016:run=197',\
+  'exp=mfxx20515:run=2',\
+  'exp=mfx11116:run=697',\
+  'exp=mfxls0816:run=193',\
+  'exp=mecls3216:run=226',\
+  'exp=cxi11216:run=54',\
+  'exp=xcs11116:run=18',\
+  'exp=xcslr6316:run=17',\
+  'exp=xcsls3716:run=631',\
+  'exp=xcsx22015:run=555',\
+  'exp=xppls2416:run=247',\
+)
+
+DETNAMES = (\
+  'Jungfrau',\
+  'Jungfrau.0',\
+  'MfxEndstation.0:Jungfrau.0',\
+  'MfxEndstation.0:Jungfrau.1',\
+  'DetLab.0:Jungfrau.0',\
+  'MecTargetChamber.0:Jungfrau.0',\
+  'CxiEndstation.0:Jungfrau.0',\
+  'XcsEndstation.0:Jungfrau.0',\
+  'XcsEndstation.0:Jungfrau.1',\
+  'or their aliases, etc...',\
+)
+#-----------------------------
+
